--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_hint">Title</string>
     <string name="note_text_hint">Note Text</string>
     <string name="notes">Notes</string>
+    <string name="note">Note</string>
 </resources>
